--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,9 +1,10 @@
 .Navigation-bar {
-  height: 10vh;
+  height: 8vh;
   width: 100vw;
   background: linear-gradient(90deg, #FF0073, #7300FF);
   display: flex;
   align-items: center;
+  box-shadow: 0px 2px 2px 2px rgba(0,0,0,0.2);
 }
 
 .Navigation-label {
@@ -15,5 +16,6 @@
 
 .Navigation-icon {
   color: white;
+  font-size: 2em;
   padding-left: 60px;
 }
