--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+  background: #F0F0F0;
+  height: 100%;
+}
+
+.App-page {
+  display: flex;
+  flex-direction: row;
+}
+
+.App-SideBar {
+  flex: 1;
+  height: 100%;
 }
 
 .App-logo {
