--- a/src/components/NewEvent/FirstStep.css
+++ b/src/components/NewEvent/FirstStep.css
@@ -18,6 +18,7 @@
 
 .FirstStep-form {
   padding: 20px 0;
+  max-width: 30vw;
 }
 
 .FirstStep-formTitle {
@@ -29,11 +30,16 @@
   color: #717171;
   outline: none;
   font-size: 1em;
-  border: 1px solid rgba(213, 213, 213, 1);
+  border: 1.4px solid rgba(213, 213, 213, 1);
+  transition: all .4s;
   border-radius: 3px;
   height: 20px;
   width: 100%;
   margin: 10px 0px 0px 0px;
+}
+
+.FirstStep-formTitleInput:focus {
+  border: 1.4px solid rgba(113, 113, 113, 1);
 }
 
 .FirstStep-image {
@@ -71,4 +77,15 @@
   width: 170px;
   height: 30px;
   cursor: pointer;
+}
+
+.FirsStep-message {
+  background: #EAE9EA;
+  border-radius: 5px;
+  padding: 15px 20px;
+}
+
+.message {
+  color: #717171;
+  font-size: 0.75em;
 }
