--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,6 +1,7 @@
 .SideBar {
   width: 170px;
-  height: 100%;
+  min-width: 170px;
+  min-height: 100%;
   background: white;
   display: flex;
   flex-direction: column;
