--- a/src/components/NewEvent/ThirdStep.css
+++ b/src/components/NewEvent/ThirdStep.css
@@ -40,3 +40,40 @@
 .ThirdStep-formTitleInput:focus {
   border: 1.4px solid rgba(113, 113, 113, 1);
 }
+
+.ThirdStep-mapCheckboxSection {
+  padding: 20px 0 10px 0;
+  display: flex;
+  align-items: flex-end;
+}
+
+.ThirdStep-mapCheckbox {
+  margin-right: 7px;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"] + span {
+  display: inline-block;
+  position: relative;
+  top: -1px;
+  width: 20px;
+  height: 20px;
+  margin: -1px 0px 0 0;
+  vertical-align: middle;
+  background: white left top no-repeat;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked + span{
+  background: #717171;
+}
+
+input[type="checkbox"] + span {
+  margin-right: 4px;
+}
+
